--- a/fandom_fateGO_stylus.css
+++ b/fandom_fateGO_stylus.css
@@ -1,3 +1,5 @@
+@-moz-document domain(fategrandorder.fandom.com)
+{
 /*
 ================
    Wikia  
@@ -229,4 +231,5 @@ table {
 /* To make <big> usually look nice... */
 big {
     color: #8f8b8b;
+}
 }
