Changes to building, hiding atlantis-bg

--- a/src/fandomwikia/fate_grand_order/servant_page.css
+++ b/src/fandomwikia/fate_grand_order/servant_page.css
@@ -23,6 +23,14 @@ table.ServantInfoNav tbody tr td {
 }
 /* End: Make glyph visible */
 
+/* Remove atlantis-bg 
+Noticed here: https://fategrandorder.fandom.com/wiki/Achilles
+*/
+
+.atlantis-bg {
+    background: none !important;
+}
+
 .pi-tab-link {
     background-color: #000000 !important;
 }
