--- a/src/fandomwikia/fandomwikia.css
+++ b/src/fandomwikia/fandomwikia.css
@@ -19,6 +19,19 @@ Fandom Wikia
   color: #66798f !important;
 }
 
+/* Fan Feed */
+[class*=discussions],
+[class*=discussions]:after,
+[class*=discussions]:before,
+[class*="related-wikis"] {
+  color: #fcf9f9 !important;
+  background-color: #000000 !important;
+}
+
+[class*=discussions__in] {
+  color: #747474bf !important;
+}
+
 /* Fix share button icon*/
 svg.wds-icon.wds-icon-small {
   color: #fcf9f9 !important;
